--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Accommodation, Prague Zbraslav</title>
+    <title id="page-title">Ubytování Praha Zbraslav, Accommodation Prague Zbraslav</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,161 +11,33 @@
     <div id="topbar">
         <div class="wrapper">
             <div id="title">
-                <h1>Accommodation, Prague Zbraslav</h1>
+                <h1 id="header-title">Ubytování Praha Zbraslav, Accommodation Prague Zbraslav</h1>
             </div>
             <div id="menu">
                 <ul>
-                    <li class="index active"><a href="#page_index">Pricing</a></li>
-                    <li class="amenities"><a href="#page_amenities">Amenities</a></li>
-                    <li class="gallery"><a href="#page_gallery">Gallery</a></li>
-                    <li class="contact"><a href="#page_contact">Contact</a></li>
+                    <li class="pricelist active"><a href="#pricelist" data-lang-key="menu_pricelist">Ceník</a></li>
+                    <li class="amenities"><a href="#amenities" data-lang-key="menu_amenities">Vybavení</a></li>
+                    <li class="gallery"><a href="#gallery" data-lang-key="menu_gallery">Fotogalerie</a></li>
+                    <li class="contact"><a href="#contact" data-lang-key="menu_contact">Kontakt</a></li>
                 </ul>
             </div>
+            <div id="language-switcher">
+                <button data-lang="cs">CZ</button>
+                <button data-lang="en">EN</button>
+                <button data-lang="de">DE</button>
+            </div>
+            <div style="clear:both"></div>
         </div>
     </div>
 
     <div id="content-wrapper">
         <div id="content" class="wrapper">
-
-            <!-- Pricing page -->
-            <div id="page_index" class="pagediv">
-                <div class="element u-title">
-                    <h3>
-                        We offer the entire 65 m² family house for rent, with a large living room connected to a fully equipped kitchen (dishwasher, oven, induction hob, microwave, kettle), bathroom with whirlpool and washing machine.
-                        Master bed: 180×200 cm; additional sofa bed 80×200 cm.<br>
-                        Free parking behind the gate upon arrangement.<br>
-                        Metro “Smíchovské nádraží” + bus 129/318 (17 min), Wenceslas Square by bus ~40 min (16 km).
-                        Airport by car/ride-share: ~25 min.
-                    </h3>
-                </div>
-                <div class="element u-title">
-                    <table>
-                        <tr>
-                            <td><h4>Min. 6 nights</h4></td>
-                            <td><h4>Max. 3 persons</h4></td>
-                        </tr>
-                        <tr>
-                            <td><h4>Price (except 24.12 & 31.12)</h4></td>
-                            <td><h4>1 900 CZK/night – 80 EUR/night – BTC</h4></td>
-                        </tr>
-                        <tr>
-                            <td><h4>Address</h4></td>
-                            <td><h4>Kubínova, Prague 5 Zbraslav</h4></td>
-                        </tr>
-                        <tr><td colspan="2">&nbsp;</td></tr>
-                        <tr>
-                            <td><h4>Free Wi-Fi</h4></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><h4>Free Parking</h4></td>
-                            <td></td>
-                        </tr>
-                        <tr><td colspan="2">&nbsp;</td></tr>
-                        <tr>
-                            <td>
-                                <a href="https://1url.cz/muFX9" target="_blank">
-                                    <img src="img/booking.png" alt="Booking.com">
-                                </a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><img src="img/tlf.png" alt="Phone icon"></td>
-                            <td></td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-
-            <!-- Amenities page -->
-            <div id="page_amenities" class="pagediv" style="display:none">
-                <div class="element u-title">
-                    <h3>Amenities</h3>
-                    <p>
-                        Cleaning products, Cooking basics, Workspace, Dishes/cutlery, Dryer, Hairdryer, Heating, Whirlpool, Kitchen, TV, Washing machine, Wi-Fi, Bathtub, Soap, Hot water, Shampoo, Shower gel, Bedding, Closet/storage, Clothes rack, Extra pillows/blankets, Hangers, Iron, Ethernet connection, Fitness equipment, Fireplace, Portable fans, CO detector, First aid kit, Smoke detector, Baking sheet, Dining table, Dishwasher, Freezer, Electric kettle, Oven, Refrigerator, Stove, Wine glasses, Private entrance, Yard, On-site parking, Single-story, Long-term stays allowed, Luggage drop-off allowed.
-                    </p>
-                </div>
-            </div>
-
-            <!-- Gallery page -->
-            <div id="page_gallery" class="pagediv" style="display:none">
-                <div class="element u-2photos">
-                    <div class="frame"><img src="img/kalen3.jpg" alt="Photo"></div>
-                    <div class="frame"><img src="img/kalen2.jpg" alt="Photo"></div>
-                    <div class="frame"><img src="img/kalen.jpg"  alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr4.jpg"   alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr5.jpg"   alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr6.jpg"   alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr7.jpg"   alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr8.jpg"   alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr9.jpg"   alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr10.jpg"  alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr11.jpg"  alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr12.jpg"  alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr13.jpg"  alt="Photo"></div>
-                    <div class="frame"><img src="img/zbr14.jpg"  alt="Photo"></div>
-                </div>
-            </div>
-
-            <!-- Contact page -->
-            <div id="page_contact" class="pagediv" style="display:none">
-                <div class="element u-text">
-                    <p><a href="https://www.google.com/maps/place/Kub%C3%ADnova,+156+00+Zbraslav" target="_blank">View map</a></p>
-                    <p><img src="img/tlf.png" alt="Phone icon"></p>
-                    <p>Kubínova, Prague 5</p>
-                    <p>Company ID: 28206207</p>
-                    <script src="https://c1.navrcholu.cz/code?site=139642;t=lb14" async></script>
-                    <noscript><a href="http://navrcholu.cz/"><img src="http://c1.navrcholu.cz/hit?site=139642" alt="NAVRCHOLU.cz"></a></noscript>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
 
 <div id="bottombar">
-    <div id="footer"><div class="wrapper">2023 © Accommodation</div></div>
-</div>
-
-<!-- Booking modal -->
-<div id="booking-modal" class="pagediv booking-div">
-    <h3>Book Your Stay</h3>
-    <form id="booking-form">
-        <div class="form-group">
-            <label for="start-date">Check-in Date:</label>
-            <input type="date" id="start-date" required>
-        </div>
-        <div class="form-group">
-            <label for="end-date">Check-out Date:</label>
-            <input type="date" id="end-date" required>
-        </div>
-        <div class="form-group">
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" required>
-        </div>
-        <div class="form-group">
-            <label for="currency">Currency:</label>
-            <select id="currency">
-                <option>CZK</option>
-                <option>EUR</option>
-                <option>BTC</option>
-            </select>
-        </div>
-        <p id="price-display">Price: <span>-</span></p>
-        <p id="error-message" class="error"></p>
-        <button type="submit">Submit Booking</button>
-    </form>
-    <div id="payment-options" style="display:none;">
-        <h4>Payment Options</h4>
-        <div id="payment-czk" class="payment-info"><p>Account CZK: <b id="account-czk"></b></p></div>
-        <div id="payment-eur" class="payment-info"><p>Account EUR: <b id="account-eur"></b></p></div>
-        <div id="payment-btc" class="payment-info">
-            <p>BTC Address: <b id="btc-address"></b></p>
-            <img id="btc-qr" alt="BTC QR">
-        </div>
-        <p>Your booking will be confirmed after payment is received.</p>
-    </div>
+    <div id="footer"><div class="wrapper" id="footer-text">2023 © Ubytování Praha Zbraslav</div></div>
 </div>
 
 <script src="script.js"></script>
