--- a/client/index.html
+++ b/client/index.html
@@ -9,37 +9,40 @@
 <body>
 
 <div id="pager">
-    <div id="topbar">
+    <header id="topbar">
         <div class="wrapper">
             <div id="title">
-                <h1 id="header-title" data-lang-key="header_title">Ubytování Praha Zbraslav</h1>
+                <h1 data-lang-key="header_title">Ubytování Praha Zbraslav</h1>
             </div>
-            <div id="language-switcher-container"></div>
-            <div id="menu">
-                <ul>
-                    <li class="index active"><a href="#page_index" data-lang-key="menu_pricelist">Ceník</a></li>
-                    <li class="amenities"><a href="#page_amenities" data-lang-key="menu_amenities">Vybavení</a></li>
-                    <li class="gallery"><a href="#page_gallery" data-lang-key="menu_gallery">Fotogalerie</a></li>
-                    <li class="contact"><a href="#page_contact" data-lang-key="menu_contact">Kontakt</a></li>
-                </ul>
+            <div id="topbar-right-panel">
+                <nav id="menu">
+                    <ul>
+                        <li class="index active"><a href="#page_index" data-lang-key="menu_pricelist">Ceník</a></li>
+                        <li class="amenities"><a href="#page_amenities" data-lang-key="menu_amenities">Vybavení</a></li>
+                        <li class="gallery"><a href="#page_gallery" data-lang-key="menu_gallery">Fotogalerie</a></li>
+                        <li class="contact"><a href="#page_contact" data-lang-key="menu_contact">Kontakt</a></li>
+                    </ul>
+                </nav>
+                <div id="language-switcher">
+                    <button data-lang="cs" class="active">CS</button>
+                    <button data-lang="en">EN</button>
+                    <button data-lang="de">DE</button>
+                </div>
             </div>
-            <div style="clear:both"></div>
         </div>
-    </div>
+    </header>
 
-    <div id="content-wrapper">
+    <main id="content-wrapper">
         <div id="content" class="wrapper">
         </div>
-    </div>
+    </main>
 </div>
 
-<div id="bottombar">
-    <div id="footer">
-        <div class="wrapper">
-            <span id="footer-text" data-lang-key="footer_text">© 2025 Ubytování Praha Zbraslav</span>
-        </div>
+<footer id="bottombar">
+    <div class="wrapper">
+        <span data-lang-key="footer_text">© 2025 Ubytování Praha Zbraslav</span>
     </div>
-</div>
+</footer>
 
 <script src="script.js"></script>
 
