--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
             <div id="topbar-right-panel">
                 <nav id="menu">
                     <ul>
-                        <li class="index active"><a href="#page_index" data-lang-key="menu_pricelist">Ceník</a></li>
+                        <li class="index active"><a href="#page_index" data-lang-key="menu_pricelist">Kalendář</a></li>
                         <li class="amenities"><a href="#page_amenities" data-lang-key="menu_amenities">Vybavení</a></li>
                         <li class="gallery"><a href="#page_gallery" data-lang-key="menu_gallery">Fotogalerie</a></li>
                         <li class="contact"><a href="#page_contact" data-lang-key="menu_contact">Kontakt</a></li>
