--- a/client/index.html
+++ b/client/index.html
@@ -14,21 +14,19 @@
             <div id="title">
                 <h1 data-lang-key="header_title">Ubytování Praha Zbraslav</h1>
             </div>
+
             <div id="topbar-right-panel">
                 <nav id="menu">
                     <ul>
-                        <li class="index active"><a href="#page_index" data-lang-key="menu_pricelist">Kalendář</a></li>
+                        <li class="index active"><a href="#page_index" data-lang-key="menu_pricelist">Ceník</a></li>
                         <li class="amenities"><a href="#page_amenities" data-lang-key="menu_amenities">Vybavení</a></li>
                         <li class="gallery"><a href="#page_gallery" data-lang-key="menu_gallery">Fotogalerie</a></li>
                         <li class="contact"><a href="#page_contact" data-lang-key="menu_contact">Kontakt</a></li>
                     </ul>
                 </nav>
-                <div id="language-switcher">
-                    <button data-lang="cs" class="active">CS</button>
-                    <button data-lang="en">EN</button>
-                    <button data-lang="de">DE</button>
-                </div>
+                <div id="language-switcher"></div>
             </div>
+
         </div>
     </header>
 
