--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,10 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+<script src="https://npmcdn.com/flatpickr/dist/l10n/cs.js"></script>
+<script src="https://npmcdn.com/flatpickr/dist/l10n/de.js"></script>
+
 <script src="script.js"></script>
 
 </body>
